--- a/index.html
+++ b/index.html
@@ -767,6 +767,9 @@
                 margin-top: 5px !important;
                 letter-spacing: 0.5px !important;
                 border-width: 1px !important;
+                background: #1a1a1a !important;   /* solid dark bg so white text always visible */
+                color: #ffffff !important;
+                border-color: #555 !important;
             }
             
             /* Modal adjustments */
@@ -798,7 +801,7 @@
             .card-details { padding: 5px 3px !important; }
             .p-name { font-size: 0.65rem !important; }
             .price { font-size: 0.8rem !important; }
-            .buy-btn { font-size: 0.55rem !important; padding: 6px 3px !important; }
+            .buy-btn { font-size: 0.55rem !important; padding: 6px 3px !important; background: #1a1a1a !important; color: #ffffff !important; }
         }
 
         /* === INSTAGRAM FEED SECTION === */
